--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
             position: relative;
         }
         .err:before {
-            content: "~~~~~~~~~~~~";
+            content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
             font-size: 0.6em;
             font-weight: 700;
             font-family: Times New Roman, Serif;
-            color: red;
+            color: black;
             width: 100%;
             position: absolute;
-            top: 12px;
+            top: 60px;
             left: -1px;
             overflow: hidden;
-        }
     </style>
     <title>Bubie Pardesia</title>
 </head>
 <body>
 
     <div class="container d-flex justify-content-center flex-column align-items-center">
-        <h1 class="display-1 my-4">Bubie k liye chhoti si webstie</h1>
+        <h1 class="display-1 my-4 err">Bubie k liye chhoti si webstie</h1>
         <div class="jumbotron">
             <p class="display-4 text-center my-4" id="quoteArea">What up bubie 😉</p>
         </div>
